ags (4.5.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* modified ags_vst_types.h AgsVstSpeakerArrangement typedef
	* removed updatehandler.h and updatehandler.cpp
	* fixed type safety with recent clang
	* added ags_pad_test_flags(), ags_pad_set_flags() and ags_pad_unset_flags()
	* added ags_line_test_flags(), ags_line_set_flags() and ags_line_unset_flags()
	* added ags_effect_pad_test_flags(), ags_effect_pad_set_flags() and ags_effect_pad_unset_flags()
	* added ags_effect_line_test_flags(), ags_effect_line_set_flags() and ags_effect_line_unset_flags()
	* added ags_connection_editor_test_flags(), ags_connection_editor_set_flags() and ags_connection_editor_unset_flags()
	* refactored AgsExportWindow with AGS_EXPORT_WINDOW_HAS_STOP_TIMEOUT
	* fixed ags_ladspa_plugin_preferences_alloc() prototype declaration
	* fixed ags_connection_editor_line_new() prototype declaration
	* fixed memory-leak in ags_export_window.c
	* TODO:JK: implemented ags-fx-alsa-mixer
	* TODO:JK: implemented ags-fx-oss-mixer
	* WONT-DO:JK: because needs a proper w32 driver, MIDI support of WASAPI

ags (4.4.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added missing putenv GIO_MODULE_DIR and GSETTINGS_SCHEMA_DIR
	* TODO:JK: fixed type safety with recent clang
	* minor improvements

ags (4.4.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved thread-safety of AgsSynthGenerator and machines using it like AgsSynth, AgsFMSynth, AgsSyncsynth and AgsFMSyncsynth
	* improved AgsIndicator applying margin of GtkWidget

ags (4.4.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed SIGSEGV with AgsResampleUtil set buffer length
	* minor improvements

ags (4.4.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_sound_resource_read_audio_signal_at_once() giving more accurate resampling

ags (4.3.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved functional test termination