@@ -76,7 +76,7 @@ To build gsequencer with VST3 support you need download and compile the VST3 SDK
 export CXXFLAGS="-include cstdio -std=gnu++20 -fpermissive"
 export LIBAGS_VST3_RELEASE_TYPE="-DRELEASE"
 export LIBAGS_VST3_CPPFLAGS="-I$HOME/github/vst3sdk"
-export LIBAGS_VST3_LIBS="-L$HOME/github/vst3sdk/build/lib"
+export LIBAGS_VST3_LIBDIR="-L$HOME/github/vst3sdk/build/lib"
 
 $ ./configure --prefix=/usr --enable-vst3
 $ make -j8
