@@ -20,9 +20,12 @@ rm -f docs/reference/libags-audio/libags_audio-undocumented.txt
 rm -f docs/reference/libags-audio/libags_audio-unused.txt
 rm -f docs/reference/libags-audio/libags_audio.args
 rm -f docs/reference/libags-audio/libags_audio.hierarchy
+rm -f docs/reference/libags-audio/libags_audio.pdf
 rm -f docs/reference/libags-audio/libags_audio.prerequisites
 rm -f docs/reference/libags-audio/libags_audio.signals
 rm -f docs/reference/libags-audio/libags_audio.types.bak
+rm -f docs/reference/libags-audio/pdf.stamp
+rm -f docs/reference/libags-audio/pdf-build.stamp
 rm -f docs/reference/libags-audio/scan-build.stamp
 rm -f docs/reference/libags-audio/setup-build.stamp
 rm -f docs/reference/libags-audio/sgml-build.stamp
@@ -38,9 +41,12 @@ rm -f docs/reference/libags-gui/libags_gui-undocumented.txt
 rm -f docs/reference/libags-gui/libags_gui-unused.txt
 rm -f docs/reference/libags-gui/libags_gui.args
 rm -f docs/reference/libags-gui/libags_gui.hierarchy
+rm -f docs/reference/libags-gui/libags_gui.pdf
 rm -f docs/reference/libags-gui/libags_gui.prerequisites
 rm -f docs/reference/libags-gui/libags_gui.signals
 rm -f docs/reference/libags-gui/scan-build.stamp
+rm -f docs/reference/libags-gui/pdf.stamp
+rm -f docs/reference/libags-gui/pdf-build.stamp
 rm -f docs/reference/libags-gui/setup-build.stamp
 rm -f docs/reference/libags-gui/sgml-build.stamp
 rm -f docs/reference/libags-gui/sgml.stamp
@@ -72,9 +78,12 @@ rm -f docs/reference/libgsequencer/libgsequencer-undocumented.txt
 rm -f docs/reference/libgsequencer/libgsequencer-unused.txt
 rm -f docs/reference/libgsequencer/libgsequencer.args
 rm -f docs/reference/libgsequencer/libgsequencer.hierarchy
+rm -f docs/reference/libgsequencer/libgsequencer.pdf
 rm -f docs/reference/libgsequencer/libgsequencer.prerequisites
 rm -f docs/reference/libgsequencer/libgsequencer.signals
 rm -f docs/reference/libgsequencer/libgsequencer.types.bak
+rm -f docs/reference/libgsequencer/pdf.stamp
+rm -f docs/reference/libgsequencer/pdf-build.stamp
 rm -f docs/reference/libgsequencer/scan-build.stamp
 rm -f docs/reference/libgsequencer/setup-build.stamp
 rm -f docs/reference/libgsequencer/sgml-build.stamp
